# django-bootstrap-templatetags

./: .pre-commit-config.yaml  pyproject.toml  setup.py
.github/workflows/: main.yml
bootstrap_templatetags/: __init__.py  test.py
bootstrap_templatetags/templatetags/: bootstrap_tags.py  easytag.py
demo/: manage.py
demo/demo/: settings.py  urls.py
