[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-bootstrap-templatetags"
dynamic = ["version"]
description = "Vanilla Bootstrap structures in simple rendering blocks"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "django",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
test = [
    "django-environ",
    "mysqlclient",
    "flake8",
    "coverage",
    "pre-commit",
    "black",
    "bandit"
]

[project.urls]
Homepage = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags"
Issues = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags/issues"
Download = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags"
Thanks = "https://saythanks.io/to/rh0dium"
Source = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags/"

[tool.hatch.version]
path = "bootstrap_templatetags/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bootstrap_templatetags",
    "/bootstrap_templatetags/templates/**/*",
    "/bootstrap_templatetags/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ['bootstrap_templatetags']
include = [
    "/bootstrap_templatetags/templates/**/*",
    "/bootstrap_templatetags/static/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.bandit]
targets = ['bootstrap_templatetags']
exclude_dirs = ["bootstrap_templatetags/tests.py"]
skips = ["B308", "B703", ]

[tool.coverage.run]
branch = true
command_line = "demo/manage.py test --noinput --settings=demo.settings_test bootstrap_templatetags"
omit = [
    "*/demo/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 65
precision = 1
skip_covered = true
skip_empty = true
ignore_errors = true
sort = "cover"

[tool.bumper]
exclude = [".idea", ".github", "demo_app"]
version_files = ["bootstrap_templatetags/__init__.py"]
repo = "pivotal-energy-solutions/django-bootstrap-templatetags"
report = "out.json"
