[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-bootstrap-templatetags"
dynamic = ["version"]
description = "Vanilla Bootstrap structures in simple rendering blocks"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "django",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "django>=5.2",
]

[project.optional-dependencies]
test = [
    "django-environ",
    "mysqlclient",
    "coverage",
    "pre-commit",
    "black",
    "bandit",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags"
Issues = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags/issues"
Download = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags"
Thanks = "https://saythanks.io/to/rh0dium"
Source = "https://github.com/pivotal-energy-solutions/django-bootstrap-templatetags/"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/bootstrap_templatetags",
    "/bootstrap_templatetags/templates/**/*",
    "/bootstrap_templatetags/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ['bootstrap_templatetags']
include = [
    "/bootstrap_templatetags/templates/**/*",
    "/bootstrap_templatetags/static/**/*",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '(\.git|.venv|_build|build|dist|.*\/__pycache__\/)'

[tool.ruff]
exclude = [".bzr", ".direnv", ".eggs", ".git", ".mypy_cache", ".nox", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "build", "dist", "node_modules"]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = ["F401", "E402"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
targets = ['bootstrap_templatetags']
exclude_dirs = ["bootstrap_templatetags/tests.py", "demo"]
skips = ["B308", "B703", ]

[tool.coverage.run]
branch = true
command_line = "demo/manage.py test --noinput --settings=demo.settings_test bootstrap_templatetags"
omit = [
    "*/demo/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 65
precision = 1
skip_covered = true
skip_empty = true
ignore_errors = true
sort = "cover"

[tool.bumper]
exclude = [".idea", ".github", "demo"]
repo = "pivotal-energy-solutions/django-bootstrap-templatetags"
report = "out.json"
